--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
         "schedule" : "0 5 * * 1"
     },
     "uploader" : {
-        "parser": "go_parser:load_data",
+        "parser": "parser:load_data",
         "on_duplicates": "error"
     }
 }
